--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Box</title>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     
+
+    <script src="/public/client.js"></script>
 </body>
 </html>
