--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
-    
+    <h1>hello world</h1>
 
     <script src="/public/client.js"></script>
 </body>
