--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <section class="chat_section">
+        <div class="code">
+            <img src="/public/chat.jpg" alt=""> 
+
+            <h1>Chat Globe</h1>
+        </div>
+
+        <div class="message_area">
+            <div class="incoming_message">
+                <h4>Jordan</h4>
+                <p>Lorem ipsum ng elit. Assumenda, aspernatur rem !</p>
+            </div>
+
+            <div class="outgoing_message">
+                <h4>Eminem</h4>
+                <p>Lorem OPsop</p>
+            </div>
+        </div>
+    </section>
+    
 
     <script src="/public/client.js"></script>
 </body>
