--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="chat_section">
         <div class="code">
-            <img src="/public/chat.jpg" alt=""> 
+            <img src="/public/NicePng.png" alt=""> 
 
             <h1>Chat Globe</h1>
         </div>
