--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 <p>Lorem OPsop</p>
             </div>
         </div>
+
+        <div>
+            <textarea id="" cols="30" rows="10" placeholder="Write Something"></textarea>
+        </div>
     </section>
     
 
