--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Box</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="./public/style.css">
 </head>
 <body>
     <section class="chat_section">
         <div class="code">
-            <img src="/public/NicePng.png" alt=""> 
+            <img height="40" src="./public/NicePng.png" alt=""> 
 
             <h1>Chat Globe</h1>
         </div>
